--- a/Proyecto/package.json
+++ b/Proyecto/package.json
@@ -19,6 +19,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
+    "sweetalert2": "^11.23.0",
+    "sweetalert2-react-content": "^5.1.0",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
