--- a/Proyecto/package.json
+++ b/Proyecto/package.json
@@ -3,14 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "start": "vite",
-    "backend": "node src/backend/server.js",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+ "scripts": {
+  "dev": "concurrently \"npm run dev-frontend\" \"npm run dev-backend\"",
+  "dev-frontend": "vite",
+  "dev-backend": "node backend/server.js",
+  "start": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview"
+}
+,
   "dependencies": {
     "@coreui/coreui": "^5.4.3",
     "@coreui/react": "^5.9.0",
@@ -29,6 +31,7 @@
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.4",
+    "concurrently": "^9.2.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
