--- a/Proyecto/package.json
+++ b/Proyecto/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^5.0.4",
     "concurrently": "^9.2.1",
     "eslint": "^9.36.0",
