--- a/Proyecto/package.json
+++ b/Proyecto/package.json
@@ -16,6 +16,7 @@
     "@coreui/react": "^5.9.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "html2canvas": "^1.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
